--- a/test.Rmd
+++ b/test.Rmd
@@ -22,7 +22,9 @@ When you click the **Knit** button a document will be generated that includes bo
 
 
 ```{r}
+#making changes here.
 summary(cars)
+
 ```
 
 You can also embed plots, for example:
